// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="sc-AxjAm jTpTok"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="sc-AxjAm jgEKJo"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="sc-AxjAm jPIcLJ"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="sc-AxjAm jUSGGQ"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as outline 1`] = `
<div>
  <button
    class="sc-AxjAm blJuMX"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as plain 1`] = `
<div>
  <button
    class="sc-AxjAm gSuvFI"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `[Function]`;
